--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito:wght@400;700&family=Roboto:wght@500&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Lemuel Leogene Reyes Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
